<project xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ostrowski.combat</groupId>
  <artifactId>OstrowskiCombat</artifactId>
  <name>Combat</name>
  <version>3.8</version>

  <description>Combat server and client</description>
  <repositories>
    <repository>
        <id>maven-eclipse-repo</id>
        <url>https://maven-eclipse.github.io/maven</url>
    </repository>
    <repository>
  		<id>apache.plugin.snapshots.https</id>
  		<url>https://repository.apache.org/content/repositories/snapshots/</url>
  		<releases>
  			<enabled>false</enabled>
  		</releases>
  	</repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>ostrowski.util</groupId>
      <artifactId>OstrowskiUtil</artifactId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <groupId>ostrowski.animation</groupId>
      <artifactId>OstrowskiAnimation</artifactId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>1.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
	   <groupId>org.lwjgl.lwjgl</groupId>
	   <artifactId>lwjgl_util</artifactId>
	   <version>2.8.4</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx</artifactId>
      <version>11</version>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>org.eclipse.core</groupId>
      <artifactId>commands</artifactId>
      <version>3.3.0-I20070605-0010</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.swt</groupId>
      <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
      <version>4.4</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/net.java.jinput/jinput -->
    <dependency>
      <groupId>net.java.jinput</groupId>
      <artifactId>jinput</artifactId>
      <version>2.0.5</version>
    </dependency>
  </dependencies>

  <build>

    <resources>
      <resource>
        <directory>${basedir}/src/main/resources</directory>
        <includes>
          <include>**/*.png</include>
          <include>*.png</include>
          <include>*.css</include>
        </includes>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <generateBackupPoms>false</generateBackupPoms>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
	  </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>
<!--      <plugin>-->
<!--        <groupId>net.unto.maven.plugins</groupId>-->
<!--        <artifactId>maven-junit4-plugin</artifactId>-->
<!--        <version>1.0-SNAPSHOT</version>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <phase>test</phase>-->
<!--            <goals>-->
<!--              <goal>test</goal>-->
<!--            </goals>-->
<!--          </execution>-->
<!--        </executions>-->
<!--      </plugin>-->
    </plugins>
  </build>
 
  <pluginRepositories>
    <pluginRepository>
      <id>unto.net</id>
      <url>https://repository.unto.net/maven/</url>
      <releases>
        <updatePolicy>daily</updatePolicy>
        <checksumPolicy>warn</checksumPolicy>
      </releases>
      <snapshots>
        <updatePolicy>daily</updatePolicy>
        <checksumPolicy>warn</checksumPolicy>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

</project>